--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fiskaflokkingarspæl",
-  "name": "Flokka fiskarnar í ávikavist upp- og botnsjóvarfisk",
+  "short_name": "My dad the fisherman",
+  "name": "spæl til filmin \"My dad the fisherman\"",
   "icons": [
     {
       "src": "favicon.ico",
