changed title to Pápi mín er fiskimaður

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My dad the fisherman",
-  "name": "spæl til filmin \"My dad the fisherman\"",
+  "short_name": "Pápi mín er fiskimaður",
+  "name": "spæl til filmin \"Pápi mín er fiskimaður\"",
   "icons": [
     {
       "src": "favicon.ico",
