removed spæl til

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Pápi mín er fiskimaður",
-  "name": "spæl til filmin \"Pápi mín er fiskimaður\"",
+  "name": "Pápi mín er fiskimaður",
   "icons": [
     {
       "src": "favicon.ico",
